# desafio_GFT_API

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_tests.py
resource/: main.robot
resource/data/: ambientes.yaml
resource/data/schema/usuario/: atualizar.json  criacao.json
resource/helper/: Helper.resource  Validators.resource
resource/keywords/usuario/: consultar.resource  criacao.resource
resource/log/: console_log.resource
resource/utils/: String.resource  config_path.py
tests/usuario/: 01-criacao.robot  02-consultar.robot
